--- a/BontoBuyWebApplication/Views/Account/RegisterSupplier.cshtml
+++ b/BontoBuyWebApplication/Views/Account/RegisterSupplier.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "RegisterSupplier";
 }
 
-<h2>Register</h2>
+<h2>Register Supplier</h2>
 
 @using (Html.BeginForm("RegisterSupplier", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
