--- a/BontoBuyWebApplication/Views/Shared/_Layout.cshtml
+++ b/BontoBuyWebApplication/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Supplier", "RegisterSupplier", "Account")</li>
+                    <li>@Html.ActionLink("Admin", "RegisterAdmin", "Account")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
