--- a/BontoBuyWebApplication/Views/Shared/_Layout.cshtml
+++ b/BontoBuyWebApplication/Views/Shared/_Layout.cshtml
@@ -24,8 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Supplier", "RegisterSupplier", "Account")</li>
-                    <li>@Html.ActionLink("Admin", "RegisterAdmin", "Account")</li>
+                    <li>@Html.ActionLink("Supplier", "LoginSupplier", "Account")</li>
+                    <li>@Html.ActionLink("Admin", "LoginAdmin", "Account")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
