--- a/BontoBuyWebApplication/Views/Account/RegisterSupplier.cshtml
+++ b/BontoBuyWebApplication/Views/Account/RegisterSupplier.cshtml
@@ -52,22 +52,22 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12">
-                        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        @using (Html.BeginForm("RegisterSupplier", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                         {
                             @Html.AntiForgeryToken()
 
 
                             @Html.ValidationSummary("", new { @class = "text-danger" })
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" }) 
                                 <div class="col-md-10">
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" }) 
                                 </div>
                             </div>
                             <div class="form-group">
                                 @Html.LabelFor(m => m.SupplierName, new { @class = "col-md-2 control-label" })
                                 <div class="col-md-10">
-                                    @Html.TextBoxFor(m => m.SupplierName, new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.SupplierName, new { @class = "form-control" }) Organization Name must be at least 6 characters
                                 </div>
                             </div>
                             <div class="form-group">
@@ -91,7 +91,7 @@
                             <div class="form-group">
                                 @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                                 <div class="col-md-10">
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" }) Password must be at least 6 characters containing: a special character, a lowercase character and an uppercase character
                                 </div>
                             </div>
                             <div class="form-group">
