--- a/BontoBuyWebApplication/Views/Account/RegisterSupplier.cshtml
+++ b/BontoBuyWebApplication/Views/Account/RegisterSupplier.cshtml
@@ -52,56 +52,56 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12">
-                        @using (Html.BeginForm("RegisterSupplier", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                         {
                             @Html.AntiForgeryToken()
 
 
                             @Html.ValidationSummary("", new { @class = "text-danger" })
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" }) 
-                                <div class="col-md-10">
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" }) 
+                                @Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
+                                <div class="col-md-9">
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                @Html.LabelFor(m => m.SupplierName, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
-                                    @Html.TextBoxFor(m => m.SupplierName, new { @class = "form-control" }) Organization Name must be at least 6 characters
+                                @Html.LabelFor(m => m.SupplierName, new { @class = "col-md-3 control-label" })
+                                <div class="col-md-9">
+                                    @Html.TextBoxFor(m => m.SupplierName, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Street, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.Street, new { @class = "col-md-3 control-label" })
+                                <div class="col-md-9">
                                     @Html.TextBoxFor(m => m.Street, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                @Html.LabelFor(m => m.City, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.City, new { @class = "col-md-3 control-label" })
+                                <div class="col-md-9">
                                     @Html.TextBoxFor(m => m.City, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Website, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.Website, new { @class = "col-md-3 control-label" })
+                                <div class="col-md-9">
                                     @Html.TextBoxFor(m => m.Website, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" }) Password must be at least 6 characters containing: a special character, a lowercase character and an uppercase character
+                                @Html.LabelFor(m => m.Password, new { @class = "col-md-3 control-label" })
+                                <div class="col-md-9">
+                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                                <div class="col-md-10">
+                                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-3 control-label" })
+                                <div class="col-md-9">
                                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
+                                <div class="col-md-offset-9 col-md-3">
                                     <input type="submit" class="btn btn-register" value="Register" />
                                 </div>
                             </div>
