--- a/BontoBuyWebApplication/Views/Shared/_LoginPartial.cshtml
+++ b/BontoBuyWebApplication/Views/Shared/_LoginPartial.cshtml
@@ -15,8 +15,5 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+   @Html.ActionLink("Sign In", "Login", "Account", new { area = "" }, new { @class = "btn btn-success navbar-btn btn-circle" })
 }
