--- a/BontoBuyWebApplication/Views/AdminSupplier/Index.cshtml
+++ b/BontoBuyWebApplication/Views/AdminSupplier/Index.cshtml
@@ -1,10 +1,13 @@
-﻿@model IEnumerable<BontoBuyWebApplication.Models.UserRole.Supplier>
+﻿@{
+    Layout = "~/Views/Shared/AdminLayout.cshtml";
+}
+@model IEnumerable<BontoBuyWebApplication.Models.UserRole.Supplier>
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Supplier</h2>
+<h2>Index</h2>
 
 <table class="table">
     <tr>
@@ -41,7 +44,8 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.SupplierName)
@@ -74,11 +78,13 @@
             @Html.DisplayFor(modelItem => item.DateUpdated)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
 
 </table>
+
+
