--- a/BontoBuyWebApplication/Views/Shared/HomeLayout.cshtml
+++ b/BontoBuyWebApplication/Views/Shared/HomeLayout.cshtml
@@ -174,7 +174,7 @@
                     <li><a href="#">About Us</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    @Html.Partial("LoginPartial")
+                    @Html.Partial("_LoginPartial")
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> <span class="glyphicon glyphicon-shopping-cart"></span> 7 - Items<span class="caret"></span></a>
                         <ul class="dropdown-menu dropdown-cart" role="menu">
