--- a/BontoBuyWebApplication/Views/Account/RegisterSupplier.cshtml
+++ b/BontoBuyWebApplication/Views/Account/RegisterSupplier.cshtml
@@ -52,7 +52,7 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12">
-                        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        @using (Html.BeginForm("RegisterSupplier", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                         {
                             @Html.AntiForgeryToken()
 
