--- a/BontoBuyWebApplication/Views/Manage/Index.cshtml
+++ b/BontoBuyWebApplication/Views/Manage/Index.cshtml
@@ -9,6 +9,7 @@
 <div>
     <h4>Change your account settings</h4>
     <hr />
+    <p>@Html.ActionLink("Manage Profile","Index","Customer")</p>
     <dl class="dl-horizontal">
         <dt>Password:</dt>
         <dd>
